--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,17 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>retroInventory</groupId>
-    <artifactId>retroInventory</artifactId>
+    <groupId>retrosystems</groupId>
+    <artifactId>retrosystems</artifactId>
     <version>1.0</version>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-		<version>2.3.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
         </plugins>
